--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
       "prettier --write --no-error-on-unmatched-pattern"
     ]
   },
+  "dependencies": {
+    "dumi-theme-mobile": "^2.1.2"
+  },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
